build/log/idf_py_stdout_output_90706
[1/10] Performing build step for 'bootloader'
[1/1] cd /home/ynghia/CODE/IDF/vinfast/build/bootloader/esp-idf/esptool_py && /home/ynghia/.espressif/python_env/idf5.1_py3.8_env/bin/python /home/ynghia/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /home/ynghia/CODE/IDF/vinfast/build/bootloader/bootloader.bin
Bootloader binary size 0x6870 bytes. 0x790 bytes (7%) free.
[2/8] Building C object esp-idf/app_request_https/CMakeFiles/__idf_app_request_https.dir/app_request_https.c.obj
FAILED: esp-idf/app_request_https/CMakeFiles/__idf_app_request_https.dir/app_request_https.c.obj 
/home/ynghia/.espressif/tools/xtensa-esp32-elf/esp-12.2.0_20230208/xtensa-esp32-elf/bin/xtensa-esp32-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.1.4-52-g978d574e5e-dirty\" -DMBEDTLS_CONFIG_FILE=\"mbedtls/esp_config.h\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -Iconfig -I../components/app_request_https/include -I/home/ynghia/esp/esp-idf/components/newlib/platform_include -I/home/ynghia/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/ynghia/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/ynghia/esp/esp-idf/components/freertos/esp_additions/include/freertos -I/home/ynghia/esp/esp-idf/components/freertos/esp_additions/include -I/home/ynghia/esp/esp-idf/components/freertos/esp_additions/arch/xtensa/include -I/home/ynghia/esp/esp-idf/components/esp_hw_support/include -I/home/ynghia/esp/esp-idf/components/esp_hw_support/include/soc -I/home/ynghia/esp/esp-idf/components/esp_hw_support/include/soc/esp32 -I/home/ynghia/esp/esp-idf/components/esp_hw_support/port/esp32/. -I/home/ynghia/esp/esp-idf/components/heap/include -I/home/ynghia/esp/esp-idf/components/log/include -I/home/ynghia/esp/esp-idf/components/soc/include -I/home/ynghia/esp/esp-idf/components/soc/esp32 -I/home/ynghia/esp/esp-idf/components/soc/esp32/include -I/home/ynghia/esp/esp-idf/components/hal/esp32/include -I/home/ynghia/esp/esp-idf/components/hal/include -I/home/ynghia/esp/esp-idf/components/hal/platform_port/include -I/home/ynghia/esp/esp-idf/components/esp_rom/include -I/home/ynghia/esp/esp-idf/components/esp_rom/include/esp32 -I/home/ynghia/esp/esp-idf/components/esp_rom/esp32 -I/home/ynghia/esp/esp-idf/components/esp_common/include -I/home/ynghia/esp/esp-idf/components/esp_system/include -I/home/ynghia/esp/esp-idf/components/esp_system/port/soc -I/home/ynghia/esp/esp-idf/components/esp_system/port/include/private -I/home/ynghia/esp/esp-idf/components/xtensa/include -I/home/ynghia/esp/esp-idf/components/xtensa/esp32/include -I/home/ynghia/esp/esp-idf/components/lwip/include -I/home/ynghia/esp/esp-idf/components/lwip/include/apps -I/home/ynghia/esp/esp-idf/components/lwip/include/apps/sntp -I/home/ynghia/esp/esp-idf/components/lwip/lwip/src/include -I/home/ynghia/esp/esp-idf/components/lwip/port/include -I/home/ynghia/esp/esp-idf/components/lwip/port/freertos/include -I/home/ynghia/esp/esp-idf/components/lwip/port/esp32xx/include -I/home/ynghia/esp/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/ynghia/esp/esp-idf/components/esp-tls -I/home/ynghia/esp/esp-idf/components/esp-tls/esp-tls-crypto -I/home/ynghia/esp/esp-idf/components/mbedtls/port/include -I/home/ynghia/esp/esp-idf/components/mbedtls/mbedtls/include -I/home/ynghia/esp/esp-idf/components/mbedtls/mbedtls/library -I/home/ynghia/esp/esp-idf/components/mbedtls/esp_crt_bundle/include -I/home/ynghia/esp/esp-idf/components/mbedtls/mbedtls/3rdparty/everest/include -I/home/ynghia/esp/esp-idf/components/mbedtls/mbedtls/3rdparty/p256-m -I/home/ynghia/esp/esp-idf/components/mbedtls/mbedtls/3rdparty/p256-m/p256-m -I/home/ynghia/esp/esp-idf/components/esp_http_client/include -I/home/ynghia/esp/esp-idf/components/esp_event/include -I/home/ynghia/esp/esp-idf/components/json/cJSON -mlongcalls -Wno-frame-address    -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fmacro-prefix-map=/home/ynghia/CODE/IDF/vinfast=. -fmacro-prefix-map=/home/ynghia/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -DconfigENABLE_FREERTOS_DEBUG_OCDAWARE=1 -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/app_request_https/CMakeFiles/__idf_app_request_https.dir/app_request_https.c.obj -MF esp-idf/app_request_https/CMakeFiles/__idf_app_request_https.dir/app_request_https.c.obj.d -o esp-idf/app_request_https/CMakeFiles/__idf_app_request_https.dir/app_request_https.c.obj   -c ../components/app_request_https/app_request_https.c
../components/app_request_https/app_request_https.c: In function '_http_event_handler':
../components/app_request_https/app_request_https.c:19:16: warning: variable 'output_len' set but not used [-Wunused-but-set-variable]
   19 |     static int output_len; // Stores number of bytes read
      |                ^~~~~~~~~~
../components/app_request_https/app_request_https.c: In function 'parse_json':
../components/app_request_https/app_request_https.c:75:44: error: 'buffer' undeclared (first use in this function); did you mean 'setbuffer'?
   75 | void parse_json() { printf("Data get =%s", buffer); }
      |                                            ^~~~~~
      |                                            setbuffer
../components/app_request_https/app_request_https.c:75:44: note: each undeclared identifier is reported only once for each function it appears in
ninja: build stopped: subcommand failed.
